; ModuleID = '/home/carl/AnghaBench/linux/fs/f2fs/extr_data.c_get_data_block_dio_write.c'
source_filename = "/home/carl/AnghaBench/linux/fs/f2fs/extr_data.c_get_data_block_dio_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.buffer_head = type { i32 }

@F2FS_GET_BLOCK_DIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, i32, %struct.buffer_head*, i32)* @get_data_block_dio_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_data_block_dio_write(%struct.inode* %0, i32 %1, %struct.buffer_head* %2, i32 %3) #0 {
  %5 = alloca %struct.inode*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.buffer_head*, align 8
  %8 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.buffer_head* %2, %struct.buffer_head** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.inode*, %struct.inode** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.buffer_head*, %struct.buffer_head** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @F2FS_GET_BLOCK_DIO, align 4
  %14 = load %struct.inode*, %struct.inode** %5, align 8
  %15 = getelementptr inbounds %struct.inode, %struct.inode* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @f2fs_rw_hint_to_seg_type(i32 %16)
  %18 = load %struct.inode*, %struct.inode** %5, align 8
  %19 = call i64 @IS_SWAPFILE(%struct.inode* %18)
  %20 = icmp ne i64 %19, 0
  %21 = zext i1 %20 to i64
  %22 = select i1 %20, i32 0, i32 1
  %23 = call i32 @__get_data_block(%struct.inode* %9, i32 %10, %struct.buffer_head* %11, i32 %12, i32 %13, i32* null, i32 %17, i32 %22)
  ret i32 %23
}

declare dso_local i32 @__get_data_block(%struct.inode*, i32, %struct.buffer_head*, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @f2fs_rw_hint_to_seg_type(i32) #1

declare dso_local i64 @IS_SWAPFILE(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
